Fix missing margin in breadcrumbs.

--- a/modules/nsmbhd/css/style.css
+++ b/modules/nsmbhd/css/style.css
@@ -47,6 +47,7 @@
 #stickybar-maxwidth .breadcrumbs_bar {
 	padding-left: 8px;
 	padding-right: 148px;
+	margin: 0;
 }
 
 #stickybar li a {
